1. 修正表格內日期顯示問題 2. 修正 無法清除日曆問題 3. 加入當天日期 表格黃色底色

--- a/index.html
+++ b/index.html
@@ -79,60 +79,60 @@
             </tr>
           </thead>
           <tbody>
-            <tr class="day" data-week="week-1">
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-            </tr>
-            <tr class="day" data-week="week-2">
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-            </tr>
-            <tr class="day" data-week="week-3">
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-            </tr>
-            <tr class="day" data-week="week-4">
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-            </tr>
-            <tr class="day" data-week="week-5">
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-            </tr>
-            <tr class="day" data-week="week-6">
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-              <td><a href="todolist.html">&nbsp;</a></td>
-            </tr>
+            <!-- <tr class="day" data-week="week-1"> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+            <!-- </tr> -->
+            <!-- <tr class="day" data-week="week-2"> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+            <!-- </tr> -->
+            <!-- <tr class="day" data-week="week-3"> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+            <!-- </tr> -->
+            <!-- <tr class="day" data-week="week-4"> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+            <!-- </tr> -->
+            <!-- <tr class="day" data-week="week-5"> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+            <!-- </tr> -->
+            <!-- <tr class="day" data-week="week-6"> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+              <!-- <td><a href="todolist.html">&nbsp;</a></td> -->
+            <!-- </tr> -->
           </tbody>
         </table>
       </section>
